--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=currency-conversion-service
 server.port=8100
 # Config Server (Spring Cloud)
 spring.config.import=optional:configserver:http://localhost:8888
+#spring.cloud.config.import-check.enabled=false
+#spring.cloud.config.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
