--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.config.import=optional:configserver:http://localhost:8888
 #spring.cloud.config.import-check.enabled=false
 #spring.cloud.config.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=127.0.0.1
